@@ -1,0 +1,48 @@
+(define-signal set_focus
+  (of-object "GtkWindow")
+  (return-type "none")
+  (when "last")
+  (parameters
+    '("GtkWindow*" "window")
+    '("GtkWidget*" "focus")
+  )
+)
+
+(define-signal frame_event
+  (of-object "GtkWindow")
+  (return-type "gboolean")
+  (when "last")
+  (parameters
+    '("GtkWidget*" "widget")
+    '("GdkEvent*" "event")
+  )
+)
+
+(define-signal activate_focus
+  (of-object "GtkWindow")
+  (return-type "none")
+  (when "last")
+  (parameters
+    '("GtkWindow*" "window")
+  )
+)
+
+(define-signal activate_default
+  (of-object "GtkWindow")
+  (return-type "none")
+  (when "last")
+  (parameters
+    '("GtkWindow*" "window")
+  )
+)
+
+(define-signal move_focus
+  (of-object "GtkWindow")
+  (return-type "none")
+  (when "last")
+  (parameters
+    '("GtkWindow*" "window")
+    '("GtkDirectionType" "direction")
+  )
+)
+
