@@ -1,4 +1,11 @@
-2001-11-09  Mike Kestner <mkestner@speakeasy.net>
+2001-11-13  Mike Kestner <mkestner@speakeasy.net>
+
+	* codegen/get-signals-from-source.pl : My own little perl signal 
+	parser.  
+	* codegen/gtk-signals.defs : Ripped the GtkWindow signals into here
+	to goof with.
+
+2001-11-10  Mike Kestner <mkestner@speakeasy.net>
 
 	* codegen/defs-parse.pl : Fix String prop generation code.
 	* gtk/Window.custom : Fix ctor param casting error.
